Changing to fix spacing.

--- a/_sass/minima/_family_page.scss
+++ b/_sass/minima/_family_page.scss
@@ -24,6 +24,7 @@ $accentDark:  #181818;
 
 .article_list_tag {
     margin-bottom: 0px;
+    margin-right: 0px;
 }
 
 .page-content {
